@startuml
title BancoDigitalHexa - Diagrama de Componentes (Arquitectura Hexagonal)

package "Adaptador de Entrada" {
  [ConsoleInputAdapter] --> (CreateAccountUseCase)
  [ConsoleInputAdapter] --> (CheckBalanceUseCase)
}

package "Aplicación (Casos de Uso)" {
  (CreateAccountUseCase) <|-- [CreateAccountService]
  (CheckBalanceUseCase) <|-- [CheckBalanceService]
}

package "Puertos de Salida" {
  interface AccountRepository
  interface NotificationPort
}

package "Adaptadores de Salida" {
  [AccountRepositoryInMemory] ..|> AccountRepository
  [ConsoleNotificationAdapter] ..|> NotificationPort
}

package "Dominio" {
  [Account]
  [Transaction]
}

' Relaciones entre servicios y puertos de salida
[CreateAccountService] --> AccountRepository
[CreateAccountService] --> NotificationPort
[CheckBalanceService] --> AccountRepository

@enduml
